Reetan.Nayak Dev 25/force-app/main/default/objects/Contact_Activity_Detail__c/Contact_Activity_Detail__c.object-meta.xml
<CustomObject>
    <description>object that links the shadow activity and contact record</description>
    <label>Contact Activity Detail</label>
    <nameField>
        <displayFormat>CAD-{00000}</displayFormat>
        <label>Contact Activity Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Activities Detail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>