Reetan.Nayak Dev 25/force-app/main/default/objects/Contact_Activity_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Activities Detail</relationshipLabel>
    <relationshipName>Contact_Activities_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>