Reetan.Nayak Dev 25/force-app/main/default/objects/Contact_Activity_Detail__c/fields/Shadow_Activity__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related shadow activity record</description>
    <label>Shadow Activity</label>
    <referenceTo>Shadow_Activity__c</referenceTo>
    <relationshipLabel>Contact Activities Detail</relationshipLabel>
    <relationshipName>Contact_Activities_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>