Reetan.Nayak Dev 25/force-app/main/default/objects/Contact_Activity_Detail__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <label>Unique ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>